fix active navbar elem alignment on ie

--- a/assembl/static2/css/components/navbar.scss
+++ b/assembl/static2/css/components/navbar.scss
@@ -56,7 +56,7 @@
     font-family: $font-family2;
     font-size: $font-size-xs;
     letter-spacing: .8px;
-    line-height: $navbar-line-height;
+    line-height: 0;
     padding: 0 20px;
     text-transform: uppercase;
     white-space: nowrap;
@@ -75,6 +75,7 @@
       height: 0;
       overflow: hidden;
       visibility: hidden;
+      line-height: 0;
     }
 
     &:focus {
